--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<input type="text" class="form-control" id="frequency">
 					</div>
 
-					<button type="submit" id="add-train" class="btn btn-success">Submit</button>
+					<button type="submit" id="addtrain" class="btn btn-success">Submit</button>
 				</form>
 			</div>
 		</div>
